NXT-489 Solved Bug - Full width variant - Content not restricted to main content block / doesn’t align with other content on page - starts around 1200px.

--- a/web/src/components/Testimonial/Testimonial.module.scss
+++ b/web/src/components/Testimonial/Testimonial.module.scss
@@ -165,6 +165,7 @@
     }
 
     #{$block}__mainContent {
+      @include layout.fullWidthContainer;
       padding-left: 0;
       padding-right: 0;
 
